Changes in version 1.8.5

BUG FIXES and IMPROVEMENTS

- Correction d'un bug lors de l'export d'une carte leaflet en png, jpeg ou pdf. La fonction mapview::mapshot est buggée (les \\ sont mal reconnus dans le chemin de fichier). Simplification de la fonction : appels directs aux fonctions htmlwidgets::saveWidget pour créer le fichier html puis webshot::webshot sur ce fichier pour créer le format png, jpeg ou pdf.
- Correction d'un bug dans les flèches joignantes (shiny_joignantes, leaflet_joignantes et plot_joignantes). Le filtre sur la distance des flèches ne fonctionnait pas.
- Correction d'un bug lors de la modification de la couleur de l'analyse en classes d'une carte leaflet (set_couleur_classes()). Les couleurs de la légende n'étaient pas modifiées.
- Correction de la gestion de l'encodage des libellés. Conversion en UTF-8 uniquement si l'encodage initial est en latin1.

Changes in version 1.8.4

BUG FIXES and IMPROVEMENTS

- Pour les fonctions leaflet_xxx et shiny_xxx, amélioration de l'affichage des légendes des ronds, classes et flèches.
- Simplification du code.
- Correction de bugs divers.

Changes in version 1.8.3

BUG FIXES and IMPROVEMENTS

- Pour les fonctions leaflet_xxx et shiny_xxx, modification de la gestion d'affichage des légendes des ronds, classes et flèches : construction de la légende et initialisation de l'objet leaflet en projection locale métrique. La reprojection en WGS84 est faite automatiquement à l'affichage de la carte. Cela permet de supprimer les éventuelles déformations de la légende selon la position lon/lat choisie.
- Lors d'un export Qgis, les valeurs des légendes des ronds et des flèches sont affichées directement dans le canevas de la carte et non plus que dans le composeur d'impression.
- Corrections de bugs dans la gestion des bornes de classes.

Changes in version 1.8.2

BUG FIXES and IMPROVEMENTS

- Création d'un dossier layers pour tous les fonds exportés lors d'un export Qgis.

Changes in version 1.8.1

FEATURES
