@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        r-version: [3.6, 4.0, 4.1, 4.2]
+        r-version: [3.6, 4.0, 4.1, 4.2, devel]
         
     steps:
       - uses: actions/checkout@v2
