@@ -1,6 +1,5 @@
 # Generated by roxygen2: do not edit by hand
 
-export(add_fond_osm)
 export(add_legende_classes)
 export(add_legende_fonds_simples)
 export(add_legende_joignantes)
@@ -81,6 +80,8 @@ import(leaflet)
 import(leaflet.extras)
 import(sf)
 import(shiny, except = runExample)
+import(shiny, except = runExample)
+
 import(shinyjs)
 import(shinythemes)
 import(stringr)
