@@ -674,7 +674,7 @@ NULL
 #'
 #' \code{\link{coord_legende},}
 #'
-#' \code{\link{add_source}, \link{add_titre}, \link{add_fond_osm},}
+#' \code{\link{add_source}, \link{add_titre},}
 #'
 #' \code{\link{set_fonds_simples},}
 #'
